welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: unclosed character literal
var message:String = 'rien'
                          ^BDRBuggle:1: error: ';' expected but something found.
var message:String = 'rien'
                          ^